--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,12 @@
 .App-link {
   color: #09d3ac;
 }
+
+.footer{
+  position:absolute;
+  bottom:0;
+  width: 100%;
+  height:40px;
+  background-color:#222222;
+
+}
